--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,11 @@ body {
   color: var(--text-color);
   margin: 100px;
 }
+
+button {
+  @apply cursor-pointer;
+}
+
+input {
+  @apply border border-gray-300 p-2 rounded-lg focus:ring-2 focus:ring-blue-400 focus:outline-none;
+}
