--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,4 @@
 @import "tailwindcss";
-
-:root {
-  --text-color: #ffffff;
-  --background-color: #242424;
-
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-  color-scheme: light dark;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-body {
-  background-color: var(--background-color);
-  color: var(--text-color);
-  margin: 100px;
-}
-
-button {
-  @apply cursor-pointer;
-}
-
-input {
-  @apply border border-gray-300 p-2 rounded-lg focus:ring-2 focus:ring-blue-400 focus:outline-none;
+@plugin "daisyui" {
+  themes: all;
 }
